--- a/paper.tex
+++ b/paper.tex
@@ -241,7 +241,8 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Seneca: Leveraging Serverless for Low Cost Hyperparameter Search for Machine Learning Models}
+\title{Seneca: Leveraging Serverless for Low Cost and Fast 
+Hyperparameter Search and Selection for Machine Learning Models}
 
 
 % author names and affiliations
@@ -299,7 +300,7 @@ Blind Review\\
 \end{abstract}
 
 \begin{IEEEkeywords}
-Serverless computing; Model optimization; Hyperparameters tuning
+Serverless computing; Model optimization; Hyperparameter tuning
 \end{IEEEkeywords}
 
 
@@ -424,14 +425,12 @@ Serverless computing; Model optimization; Hyperparameters tuning
 \input{conclusion}
 % conference papers do not normally have an appendix
 
-
-% use section* for acknowledgement
-% \section*{Acknowledgment}
-
-
-% The authors would like to thank...
-% more thanks here
-
+\section*{Acknowledgments}
+This work is funded in part by NSF (CNS-1703560, OAC-1541215, CCF-1539586,
+CNS-1218808, ACI-1541215) ONR NEEC (N00174-16-C-0020), Huawei
+Corporation, and the California Energy Commission (PON-14-304).
+We also thank the  AWS Cloud Credits for Research program, which enabled us to
+perform this research.
 
 % trigger a \newpage just before the given reference
 % number - used to balance the columns on the last page
