--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,27 @@
-The involvement of manual operations and domain expertise makes traditional model optimization process expensive, time-consuming and not guaranteed the optimal solution. The emergence of serverless computing offers the potential to optimize models in an auto-scaling and micro-billing fashion. In this paper, we present Seneca -- a framework for machine learning model optimization on serverless computing platform. Its automated pipeline consists of packaging, deployment, serverless function optimization and hyperparameter tuning, which provides a cost-effective, high-performing and reliable model optimization service. We evaluate Seneca by performance, cost and latency analysis on multiple regression and classification applications. The result demonstrates Seneca streamlines model deployment and optimization in agile and economical fashion.
+
+The goal of our work is to simplify and expedite the 
+construction and evaluation of machine learning models 
+using autoscaled cloud computing systems and services.
+To enable this, we develop an open source system, called Seneca, that leverages
+the serverless programming model and its implementation in Amazon Web Services
+(AWS) Lambda.  
+Seneca takes a machine learning application, dataset, and a list of 
+possible hyperparameter options.  It automatically constructs an AWS Lambda
+handler that invokes the application, ingresses and splits the dataset into training
+and testing portions, and constructs, tests, and evaluates (i.e. scores) a machine
+learning model for a given set of hyperparameter values.  Seneca orchestrates
+this execution in parallel for all possible combinations of the hyperparameters specified.
+It then returns the configuration (and model) that results in the best score 
+to the user.  
+
+We present the design and implementation of Seneca and introduce an extension to the
+system that automaticallly optimizes memory use by the functions.  
+Our empirical evaluation using
+multiple machine learning applications for regression and classification (using
+the models for prediction and not explanatory value), shows that Seneca is able to quickly
+identify the best performing model,
+for the datasets and algorithms that we study. 
+Moreover, our memory optimization reduces the cost of using
+Seneca by 10-30\% for the applications studied.
+
+%The involvement of manual operations and domain expertise makes traditional model optimization process expensive, time-consuming and not guaranteed the optimal solution. The emergence of serverless computing offers the potential to optimize models in an auto-scaling and micro-billing fashion. In this paper, we present Seneca -- a framework for machine learning model optimization on serverless computing platform. Its automated pipeline consists of packaging, deployment, serverless function optimization and hyperparameter tuning, which provides a cost-effective, high-performing and reliable model optimization service. We evaluate Seneca by performance, cost and latency analysis on multiple regression and classification applications. The result demonstrates Seneca streamlines model deployment and optimization in agile and economical fashion.
