--- a/intro.tex
+++ b/intro.tex
@@ -55,7 +55,7 @@ of the stateless nature of serverless functions~\cite{ref:onesteptwostep}.
 At the same time, identifying the ``best'' configuration for advanced
 machine learning models is challenging given the large number of configuration
 options, i.e., hyperparameters, typical of models today.
-Hyperparameters governs the learning process of machine learning applications.
+Hyperparameters govern the learning process of machine learning applications.
 Given that parameter sweeps are embarrassingly parallel, we believe
 that such tuning is a good fit for the serverless model.
 To investigate this potential, its overhead, and to simplify the 
@@ -66,14 +66,19 @@ Specifically, Seneca implements, packages, and deploys
 machine learning applications as stateless functions to AWS Lambda.
 It then orchestrates exhaustive evaluation of hyperparameter settings
 to identify the best performing model (for a given dataset) by
-comparing the error and accuracy across models.  Users present
-Seneca with their application, a range of values for 
-each hyperparameter (or the default can be used), and a dataset.
+comparing the error and accuracy across models.  We consider
+prediction accuracy (as opposed to explanatory power) as the
+scoring metric (mean squared error for regression 
+and accuracy percent for classification), to avoid overfitting.
+Users present Seneca with their application, a range of values for 
+each hyperparameter (or the default can be used), and a representative dataset.
 Seneca produces, tests, and evaluates models for all combinations 
-of hyperparameters and returns to the user, 
+of hyperparameters and returns to the user
 the set of parameters (or the model itself) that produces
 the best cross-validation score (e.g. lowest squared error or highest
-accuracy).
+accuracy) for the dataset. Users can employ this model for other datasets
+(with Seneca if desired) without retraining the model to amortize the cost
+of Seneca further.
 
 We deploy Seneca on AWS Lambda and evaluate its tuning performance, cost,
 and memory use for six machine learning applications and datasets. We 
@@ -84,6 +89,8 @@ Seneca to be very low cost and able to automatically
 identify the 
 best memory configuration for each application further lowering its 
 by 10-30\%.
+As such, Seneca greatly simplifies model construction and comparison and 
+does so with very low latency and at very low cost.
 We intend to make Seneca and the applications available as open source
 when/if this paper is accepted for publication.  In the sections
 that follow, we overview our design and implementation of Seneca and then
