mz - Add more paper discussion to related work

--- a/Seneca.tex
+++ b/Seneca.tex
@@ -46,7 +46,7 @@ and memory. The cost of a function instance is referred to as
 \texttt{compute charge}, and is calculated as the amont of 
 allocated memory multiplied by the
 billed duration (execution time rounded up to the 
-nearest 100ms)~\cite{awspricing}.
+nearest 100ms)~\cite{ref:pricing}.
 %https://aws.amazon.com/lambda/pricing/
 To ensure that we keep the cost of Seneca as low as possible, we investigate
 the impact of this pricing model on application execution and use
