--- a/intro.tex
+++ b/intro.tex
@@ -18,7 +18,7 @@ and to leverage the elasticity (auto-scaling) that
 clouds offer. To address this challenge, cloud providers 
 have started to offer cloud programming and execution environments
 under the moniker of \textit{serverless} 
-computing~\cite{xxx,yyy,zzz}.  Serverless
+computing~\cite{ref:jonas2017occupy, ref:onesteptwostep, ref:peeking}.  Serverless
 systems automatically configure, manage, and scale applications
 to significantly simplify and broaden participation in (by less expert
 users) the use of cloud systems.
@@ -41,7 +41,7 @@ In public clouds, users pay a small fee for the resources their
 functions use during execution, resulting in very low cost cloud use.
 Although now available from all public cloud providers and as open 
 source for private cloud systems, 
-AWS Lambda~\cite{awslambda} was the first and is now the 
+AWS Lambda~\cite{ref:awslambdadg} was the first and is now the 
 most popular and most advanced serverless public cloud service 
 available today.
 %awslambda: https://docs.aws.amazon.com/lambda/latest/dg/lambda-dg.pdf
