--- a/ref.bib
+++ b/ref.bib
@@ -114,6 +114,31 @@
   year          = "2019"
 }
 
+@electronic{ref:svcparams,
+  title         = "Sklearn Support Vector Classifier",
+  url           = "https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html",
+  key           = "svcparams",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+@electronic{ref:nnparams,
+  title         = "Sklearn neural network MLPClassifier",
+  url           = "https://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPClassifier.html",
+  key           = "nnparams",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+@electronic{ref:xgbbostparams ,
+  title         = "XGBoost Scikit-Learn API",
+  url           = "https://xgboost.readthedocs.io/en/latest/python/python_api.html#module-xgboost.sklearn",
+  key           = "xgboost",
+  month         = "Jan.",
+  year          = "2019"
+}
+
+
 @ARTICLE{ref:serverless_econ, 
 author={A. Eivy}, 
 journal={IEEE Cloud Computing}, 
@@ -271,6 +296,14 @@ month={March},}
   year          = "2019"
 }
 
+@electronic{ref:awslambdadg,
+  title         = "AWS Lambda Developer Guide",
+  url           = "https://docs.aws.amazon.com/lambda/latest/dg/lambda-dg.pdf",
+  key           = "AWS Lambda DG",
+  month         = "Jan.",
+  year          = "2019"
+}
+
 
 @inproceedings{ref:matrix,
 author = {Werner, Sebastian and Kuhlenkamp, Jorn and Klems, Markus and Muller, Johannes and Tai, Stefan},
@@ -313,4 +346,59 @@ doi = {10.1109/BigData.2018.8622362}
   pages={1487--1495},
   year={2017},
   organization={ACM}
+}
+
+@inproceedings{ref:lin2018tracking,
+  title={Tracking Causal Order in AWS Lambda Applications},
+  author={Lin, Wei-Tsung and Krintz, Chandra and Wolski, Rich and Zhang, Michael and Cai, Xiaogang and Li, Tongjun and Xu, Weijin},
+  booktitle={Cloud Engineering (IC2E), 2018 IEEE International Conference on},
+  pages={50--60},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{ref:jonas2017occupy,
+  title={Occupy the cloud: Distributed computing for the 99\%},
+  author={Jonas, Eric and Pu, Qifan and Venkataraman, Shivaram and Stoica, Ion and Recht, Benjamin},
+  booktitle={Proceedings of the 2017 Symposium on Cloud Computing},
+  pages={445--451},
+  year={2017},
+  organization={ACM}
+}
+
+@inproceedings {ref:encoding,
+author = {Sadjad Fouladi and Riad S. Wahby and Brennan Shacklett and Karthikeyan Vasuki Balasubramaniam and William Zeng and Rahul Bhalerao and Anirudh Sivaraman and George Porter and Keith Winstein},
+title = {Encoding, Fast and Slow: Low-Latency Video Processing Using Thousands of Tiny Threads},
+booktitle = {14th {USENIX} Symposium on Networked Systems Design and Implementation ({NSDI} 17)},
+year = {2017},
+isbn = {978-1-931971-37-9},
+address = {Boston, MA},
+pages = {363--376},
+url = {https://www.usenix.org/conference/nsdi17/technical-sessions/presentation/fouladi},
+publisher = {{USENIX} Association},
+}
+
+
+@inproceedings {ref:ephemeral,
+author = {Ana Klimovic and Yawen Wang and Christos Kozyrakis and Patrick Stuedi and Jonas Pfefferle and Animesh Trivedi},
+title = {Understanding Ephemeral Storage for Serverless Analytics},
+booktitle = {2018 {USENIX} Annual Technical Conference ({USENIX} {ATC} 18)},
+year = {2018},
+isbn = {978-1-931971-44-7},
+address = {Boston, MA},
+pages = {789--794},
+url = {https://www.usenix.org/conference/atc18/presentation/klimovic-serverless},
+publisher = {{USENIX} Association},
+}
+
+@inproceedings {ref:peeking,
+author = {Liang Wang and Mengyuan Li and Yinqian Zhang and Thomas Ristenpart and Michael Swift},
+title = {Peeking Behind the Curtains of Serverless Platforms},
+booktitle = {2018 {USENIX} Annual Technical Conference ({USENIX} {ATC} 18)},
+year = {2018},
+isbn = {978-1-931971-44-7},
+address = {Boston, MA},
+pages = {133--146},
+url = {https://www.usenix.org/conference/atc18/presentation/wang-liang},
+publisher = {{USENIX} Association},
 }
