--- a/Seneca.tex
+++ b/Seneca.tex
@@ -180,4 +180,4 @@ score (i.e., mean squared error for regression and accuracy percentage for class
 instead of $R^2$, which describes explanatory power, to avoid overfitting.
 As part of future work, we are considering using multiple datasets and a ranges
 of hyperparameter values (versus lists) to preclude the need for users to specify
-them and to consider a wider range of possible values.
+them and to consider a wider range of values.
