--- a/paper.tex
+++ b/paper.tex
@@ -241,7 +241,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Seneca: Leveraging Serverless for Low Cost and Fast 
+\title{Seneca: Low Cost and Fast 
 Hyperparameter Search and Selection for Machine Learning Models}
 
 
@@ -254,11 +254,12 @@ Hyperparameter Search and Selection for Machine Learning Models}
 %University of California, Santa Barbara\\
 %\{lebo, ckrintz, rich\}@cs.ucsb.edu}
 %}
-\author{\IEEEauthorblockN{Blind Review}\\
-\IEEEauthorblockA{Blind Review \\
-Blind Review\\
-\{blind\}@blind.blind.blind}
-}
+
+%\author{\IEEEauthorblockN{Omitted for Blind Review}%\\
+%\IEEEauthorblockA{Blind Review \\
+%Blind Review\\
+%\{blind\}@blind.blind.blind}
+%}
 
 % conference papers do not typically use \thanks and this command
 % is locked out in conference mode. If really needed, such as for
@@ -425,12 +426,12 @@ Serverless computing; Model optimization; Hyperparameter tuning
 \input{conclusion}
 % conference papers do not normally have an appendix
 
-\section*{Acknowledgments}
-This work is funded in part by NSF (CNS-1703560, OAC-1541215, CCF-1539586,
-CNS-1218808, ACI-1541215) ONR NEEC (N00174-16-C-0020), Huawei
-Corporation, and the California Energy Commission (PON-14-304).
-We also thank the  AWS Cloud Credits for Research program, which enabled us to
-perform this research.
+%\section*{Acknowledgments}
+%This work is funded in part by NSF (CNS-1703560, OAC-1541215, CCF-1539586,
+%CNS-1218808, ACI-1541215) ONR NEEC (N00174-16-C-0020), Huawei
+%Corporation, and the California Energy Commission (PON-14-304).
+%We also thank the  AWS Cloud Credits for Research program, which enabled us to
+%perform this research.
 
 % trigger a \newpage just before the given reference
 % number - used to balance the columns on the last page
