--- a/ref.bib
+++ b/ref.bib
@@ -130,7 +130,7 @@
   year          = "2019"
 }
 
-@electronic{ref:xgbbostparams ,
+@electronic{ref:xgboostparams ,
   title         = "XGBoost Scikit-Learn API",
   url           = "https://xgboost.readthedocs.io/en/latest/python/python_api.html#module-xgboost.sklearn",
   key           = "xgboost",
@@ -309,7 +309,6 @@ month={March},}
 author = {Werner, Sebastian and Kuhlenkamp, Jorn and Klems, Markus and Muller, Johannes and Tai, Stefan},
 year = {2018},
 month = {12},
-pages = {358-365},
 title = {Serverless Big Data Processing using Matrix Multiplication as Example},
 doi = {10.1109/BigData.2018.8622362}
 }
@@ -352,9 +351,7 @@ doi = {10.1109/BigData.2018.8622362}
   title={Tracking Causal Order in AWS Lambda Applications},
   author={Lin, Wei-Tsung and Krintz, Chandra and Wolski, Rich and Zhang, Michael and Cai, Xiaogang and Li, Tongjun and Xu, Weijin},
   booktitle={Cloud Engineering (IC2E), 2018 IEEE International Conference on},
-  pages={50--60},
   year={2018},
-  organization={IEEE}
 }
 
 @inproceedings{ref:jonas2017occupy,
