--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,17 +1,19 @@
 
-In this paper, we present Seneca, a new framework for simplifying and expediting
-the training and testing of machine learning models in terms of their prediction 
-power using very low cost cloud computing services.
-Specifically, Seneca leverages the AWS Lambda serverless cloud service for autoscaled
-(elastic) and parallel execution of hyperparameter search and selection for machine learning
-applications.  
+We present a new framework, called Seneca, for simplifying and expediting
+the training and testing of machine learning models
+using low cost cloud services.
+Specifically, Seneca leverages the AWS Lambda for autoscaled
+(elastic) and parallel execution of hyperparameter search 
+and selection for machine learning models.  
 Users provide Seneca with the application code and libraries, 1+ datasets, and the list 
-of possible hyperparameter settings.  Seneca uses this 
-information to automatically construct an AWS Lambda function that
-that invokes the application, imports and splits the dataset into training
-and testing datasets, and constructs, tests, and evaluates (i.e. scores) a machine
-learning model for a particular configuration of hyperparameter settings.  
-Seneca orchestrates parallel execution of these functions for all possible 
+of possible hyperparameter settings.  
+%Seneca uses this 
+%information to automatically construct models using parallel functions in AWS Lambda. 
+%an AWS Lambda function that
+%that invokes the application, imports and splits the dataset into training
+%and testing datasets, and constructs, tests, and evaluates (i.e. scores) a machine
+%learning model for a particular configuration of hyperparameter settings.  
+Seneca uses this information to orchestrate parallel execution of these functions for all possible 
 combinations of hyperparameter values specified and returns the best scoring model
 and configuration to the user (for future use on other datasets).
 
