--- a/results.tex
+++ b/results.tex
@@ -22,7 +22,7 @@ to evaluate Seneca.
 %paper submission is blind (so such references must be omitted so as not to reveal our identities):
 %Code base is available at project repository~\cite{ref:seneca}.
 \label{tab:bmarks}}
-\vspace{-0.2in}
+%\vspace{-0.2in}
 \end{table}
 
 In this section,
@@ -69,7 +69,7 @@ The default value and tuning options are listed.
 \caption{The hyperparameters that Seneca considers for XGBoost. 
 The default value and tuning options are listed. 
 \label{tab:xgboost_para}}
-\vspace{-0.2in}
+%\vspace{-0.2in}
 \end{table}
 
 \begin{table}[t]
